@@ -1,6 +1,7 @@
 12 July 2014: Wouter
 	- Fix getentropy compat code, function refs were not portable.
 	- Fix to check openssl version number only for OpenSSL.
+	- LibreSSL provides compat items, check for that in configure.
 
 11 July 2014: Matthijs
 	- fake-rfc2553 patch (thanks Benjamin Baier).
